[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "translib"
version = "0.1.0"
description = "A package to compute transport quantities (?)"
readme = ""
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["translib*"]
